# the-uber-game

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  commands.md  index.html  multiplayer.html  package-lock.json  package.json  run-game.command  singleplayer.html  vite.config.js
agent/: BATTLE_MODE_HANDOFF.md  README.md  analyst.py  battle.py  csv_level.py  designer.py  enemy_designer.py  llm.py  mock.py  object_designer.py  pipeline.py  store.py  webui.py
agent/data/: battle_state.json  enemies.json  llm_log.jsonl  objects.json
agent/entity/: __init__.py  enemy_designer_integration_plan.md  generator.py  llm_adaptive_boss_system_plan.md  schema.py  webui.py
agent/web/: entity_runtime.js  index.html
assets/levels/: castle.csv
client/: action-input.js  input.js  main.js  slice-input.js  slice-main.js  slice-style.css  start.css  start.js  style.css
cmake/: PatchSFMLMacOS.cmake
content/: token-rush-enemies.json  token-rush-enemy-demo-level.json
content/token-rush-learning/: history.jsonl  method.json  run-1-baseline.json  run-2-learned.json  run-3-learned.json
deploy/: Caddyfile  Dockerfile  README.md  compose.yaml  install-release.sh  server.Dockerfile
deploy/status/: index.html
docs/: token-rush-enemies-v2.md
docs/architecture/: 0001-vnext-engine-and-designer-boundary.md  0002-single-and-multiplayer-session-semantics.md  0003-server-client-authority-boundary.md  0004-deterministic-clock-and-replay.md  0004-immutable-content-lifecycle.md  (+3 more)
include/: ClientApp.hpp  GameServer.hpp  Protocol.hpp  TileMap.hpp
scripts/: token-rush-fixed-evaluator.mjs  token-rush-level-designer.mjs  token-rush-level-evolution-data.mjs
server/: game-room.js  index.js  solo-slice-room.js  token-rush-enemy-runtime.js
shared/: action-protocol.js  game.js  level.js  token-rush-enemies.js  token-rush-level.js
src/: ClientApp.cpp  GameServer.cpp  TileMap.cpp  main.cpp
test/: action-game-room.test.js  action-input.test.js  action-protocol.test.js  client-input.test.js  codex-image-adapter.test.js  game-room.test.js  level.test.js  mode-selector.test.js  server.test.js  slice-input.test.js  solo-slice-room.test.js  test_battle.py  test_designer.py  test_enemy_designer.py  test_entity_flight.py  test_entity_runtime_flight.js  test_llm.py  test_object_designer.py  test_pipeline.py  test_store.py  test_webui.py  token-rush-enemies.test.js  token-rush-enemy-runtime.test.js  token-rush-fixed-evaluator.test.js  token-rush-level-evolution.test.js  token-rush-level.test.js
(+223 files in other folders)
